--- a/index.html
+++ b/index.html
@@ -511,11 +511,9 @@ The Climate Rescue Adviser html file can also be edited using the very user-frie
 [[Twine2 source code|https://github.com/klembot/twinejs]]</tw-passagedata><tw-passagedata pid="2" name="Contact us" tags="@#P9996 @#Fold000" position="950,425" size="200,100">!!Contact us
 
 The manager of this Adviser project is:
-&lt;&lt;&lt;
 Philip Sutton, Strategist and Manager, RSTI.
 
-&lt;&lt;include [[Philip Sutton_email phone_2include]]&gt;&gt;
-&lt;&lt;&lt;</tw-passagedata><tw-passagedata pid="3" name="Date templates" tags="@#P9990 @#Fold000" position="1000,125" size="100,100">To print dates:
+&lt;&lt;include [[Philip Sutton_email phone_2include]]&gt;&gt;</tw-passagedata><tw-passagedata pid="3" name="Date templates" tags="@#P9990 @#Fold000" position="1000,125" size="100,100">To print dates:
 
 $thisYear
 
@@ -773,7 +771,7 @@ Tel: +61 3 9078 9746  /  (03) 9078 9746</tw-passagedata><tw-passagedata pid="10"
 		});
 	});
 &lt;&lt;/script&gt;&gt;
-/* &lt;&lt;textboxPlus&gt;&gt; widget - End */</tw-passagedata><tw-passagedata pid="14" name="Version input (2include)" tags="@#P9991 @#Fold000" position="500,125" size="100,100">&lt;nobr&gt;Adviser revised 9 March 2022, 4.31 am.  &lt;small&gt;(Begun 19 December 2021)&lt;/small&gt;&lt;/nobr&gt;</tw-passagedata><tw-passagedata pid="15" name="Getting started" tags="@#P9998 @#Fold001" position="375,0" size="100,100">&lt;&lt;include [[Start]]&gt;&gt;</tw-passagedata><tw-passagedata pid="16" name="Start" tags="@#P9999 @#Fold001" position="250,0" size="100,100">!!Getting started
+/* &lt;&lt;textboxPlus&gt;&gt; widget - End */</tw-passagedata><tw-passagedata pid="14" name="Version input (2include)" tags="@#P9991 @#Fold000" position="500,125" size="100,100">&lt;nobr&gt;Adviser revised 13 March 2022, 11.49 pm.  &lt;small&gt;(Begun 19 December 2021)&lt;/small&gt;&lt;/nobr&gt;</tw-passagedata><tw-passagedata pid="15" name="Getting started" tags="@#P9998 @#Fold001" position="375,0" size="100,100">&lt;&lt;include [[Start]]&gt;&gt;</tw-passagedata><tw-passagedata pid="16" name="Start" tags="@#P9999 @#Fold001" position="250,0" size="100,100">!!Getting started
 The purpose of the Climate Rescue Adviser is to help people to prepare a climate action plan based on a commitment to:
 *maximum protection
 *climate restoration
@@ -1340,7 +1338,7 @@ But if you are still curious about the alternative approach that we will be expl
 ----
 !!Maximum protection world</tw-passagedata><tw-passagedata pid="38" name="Stabilised climate, but hotter than now" tags="@#P9904 @#Fold003" position="1425,4050" size="100,100">&lt;&lt;fav&gt;&gt;
 ---
-!!Stabilised climate, but hotter than now</tw-passagedata><tw-passagedata pid="39" name="Building a support system for &#39;whole system&#39; action" tags="@#P9903 @#Fold004" position="1000,4475" size="200,200">!!Building a support system for &#39;whole package&#39; action
+!!Stabilised climate, but hotter than now</tw-passagedata><tw-passagedata pid="39" name="Building a support system for &#39;whole system&#39; action" tags="@#P9903 @#Fold004" position="1000,4475" size="200,200">!!Building a support system for &#39;whole system&#39; action
 
 (to come)
 
