--- a/index.html
+++ b/index.html
@@ -771,9 +771,9 @@ Tel: +61 3 9078 9746  /  (03) 9078 9746</tw-passagedata><tw-passagedata pid="10"
 		});
 	});
 &lt;&lt;/script&gt;&gt;
-/* &lt;&lt;textboxPlus&gt;&gt; widget - End */</tw-passagedata><tw-passagedata pid="14" name="Version input (2include)" tags="@#P9991 @#Fold000" position="500,125" size="100,100">&lt;nobr&gt;Adviser revised 13 March 2022, 11.49 pm.  &lt;small&gt;(Begun 19 December 2021)&lt;/small&gt;&lt;/nobr&gt;</tw-passagedata><tw-passagedata pid="15" name="Getting started" tags="@#P9998 @#Fold001" position="375,0" size="100,100">&lt;&lt;include [[Start]]&gt;&gt;</tw-passagedata><tw-passagedata pid="16" name="Start" tags="@#P9999 @#Fold001" position="250,0" size="100,100">!!Getting started
+/* &lt;&lt;textboxPlus&gt;&gt; widget - End */</tw-passagedata><tw-passagedata pid="14" name="Version input (2include)" tags="@#P9991 @#Fold000" position="500,125" size="100,100">&lt;nobr&gt;Adviser revised 17 March 2022, 2.49 am.  &lt;small&gt;(Begun 19 December 2021)&lt;/small&gt;&lt;/nobr&gt;</tw-passagedata><tw-passagedata pid="15" name="Getting started" tags="@#P9998 @#Fold001" position="375,0" size="100,100">&lt;&lt;include [[Start]]&gt;&gt;</tw-passagedata><tw-passagedata pid="16" name="Start" tags="@#P9999 @#Fold001" position="250,0" size="100,100">!!Getting started
 The purpose of the Climate Rescue Adviser is to help people to prepare a climate action plan based on a commitment to:
-*maximum protection
+*maximum protection for the climate vulnerable
 *climate restoration
 *taking action in the context of a &#39;whole package&#39; plan
 *emergency mode of action.
@@ -813,7 +813,7 @@ Okay – here we go: [[next»|&#39;Whole System&#39; Plan]]
 &lt;&lt;include [[Version input (2include)]]&gt;&gt;</tw-passagedata><tw-passagedata pid="17" name="&#39;Whole System&#39; Plan" tags="@#P9989 @#Fold002" position="950,825" size="200,200">!!Developing a maximum protection, &#39;whole system&#39; plan&lt;nobr&gt;&lt;&lt;set $genericWholePackagePlanArray to [0,0,0,0,0,0,0,0,0,0,0,0]&gt;&gt;
 &lt;/nobr&gt;
 By answering these questions, it should be possible to create a climate plan based on four key principles:
-*maximum protection
+*maximum protection for the climate vulnerable
 *climate restoration
 *taking action in the context of a &#39;Whole Package&#39; plan
 *emergency mode of action
