--- a/index.html
+++ b/index.html
@@ -771,7 +771,7 @@ Tel: +61 3 9078 9746  /  (03) 9078 9746</tw-passagedata><tw-passagedata pid="10"
 		});
 	});
 &lt;&lt;/script&gt;&gt;
-/* &lt;&lt;textboxPlus&gt;&gt; widget - End */</tw-passagedata><tw-passagedata pid="14" name="Version input (2include)" tags="@#P9991 @#Fold000" position="500,125" size="100,100">&lt;nobr&gt;Adviser revised 17 March 2022, 2.49 am.  &lt;small&gt;(Begun 19 December 2021)&lt;/small&gt;&lt;/nobr&gt;</tw-passagedata><tw-passagedata pid="15" name="Getting started" tags="@#P9998 @#Fold001" position="375,0" size="100,100">&lt;&lt;include [[Start]]&gt;&gt;</tw-passagedata><tw-passagedata pid="16" name="Start" tags="@#P9999 @#Fold001" position="250,0" size="100,100">!!Getting started
+/* &lt;&lt;textboxPlus&gt;&gt; widget - End */</tw-passagedata><tw-passagedata pid="14" name="Version input (2include)" tags="@#P9991 @#Fold000" position="500,125" size="100,100">&lt;nobr&gt;Adviser revised 27 March 2022, 3.49 am.  &lt;small&gt;(Begun 19 December 2021)&lt;/small&gt;&lt;/nobr&gt;</tw-passagedata><tw-passagedata pid="15" name="Getting started" tags="@#P9998 @#Fold001" position="375,0" size="100,100">&lt;&lt;include [[Start]]&gt;&gt;</tw-passagedata><tw-passagedata pid="16" name="Start" tags="@#P9999 @#Fold001" position="250,0" size="100,100">!!Getting started
 The purpose of the Climate Rescue Adviser is to help people to prepare a climate action plan based on a commitment to:
 *maximum protection for the climate vulnerable
 *climate restoration
@@ -812,14 +812,12 @@ Okay – here we go: [[next»|&#39;Whole System&#39; Plan]]
 &lt;large&gt;&lt;b&gt;Adviser version&lt;/b&gt;&lt;/large&gt;
 &lt;&lt;include [[Version input (2include)]]&gt;&gt;</tw-passagedata><tw-passagedata pid="17" name="&#39;Whole System&#39; Plan" tags="@#P9989 @#Fold002" position="950,825" size="200,200">!!Developing a maximum protection, &#39;whole system&#39; plan&lt;nobr&gt;&lt;&lt;set $genericWholePackagePlanArray to [0,0,0,0,0,0,0,0,0,0,0,0]&gt;&gt;
 &lt;/nobr&gt;
-By answering these questions, it should be possible to create a climate plan based on four key principles:
+By answering these questions below, it should be possible to create a climate plan based on four key principles:
 *maximum protection for the climate vulnerable
 *climate restoration
 *taking action in the context of a &#39;Whole Package&#39; plan
 *emergency mode of action
-that can be adapted for use by individuals, organisations and governements.
-
-[[Challenges for the &#39;whole system&#39; plan]]
+that can later be adapted for use by individuals, organisations and governments etc.
 
 [[Q1. Who/what should be protected?|Q1. Who-what to protect?]]
 
@@ -841,45 +839,16 @@ that can be adapted for use by individuals, organisations and governements.
 
 [[Q10. What actions are needed to build and activate the alliances?|Q10. What actions needed to activate alliances?]]
 
-[[Q11. How does the approach emerging from answering the questions above differ from the (currently) usual approach?|Q11. How does action package differ from conventional?]]
+[[11. Challenges for the &#39;whole system&#39; plan]]
 
-[[Q12. What are the action implications of these differences??|Q12. Significance of differences?]]
+[[Q12. How does the approach emerging from answering the questions above differ from the (currently) usual approach?|Q12. How does action package differ from conventional?]]
+
+[[Q13. What are the action implications of these differences?|Q13. Significance of differences?]]
 
 ----
 [[Output Report: &#39;Whole System&#39; Plan|Output Report_&#39;Whole System&#39; Plan]]
 ----
-&lt;&lt;return&gt;&gt; | [[«previous|Getting started]] | [[next»|Q1. Who-what to protect?]]</tw-passagedata><tw-passagedata pid="18" name="Challenges for the &#39;whole system&#39; plan" tags="@#P9934 @#Fold011" position="1375,825" size="100,100">[[Navigation» &#39;Whole System&#39; Plan|NAV_&#39;Whole System&#39; Plan]] | &lt;&lt;fav&gt;&gt;
-----
-!!Challenges that the &#39;whole system&#39; plan needs to deal with
-
-!!!How to answer the question
-
-//(add advisory material)//
-
-!!!Writing up your conclusions (user input)
-
-&lt;&lt;textarea &quot;$challengesConclusions&quot; &quot;&quot;&gt;&gt;
-
-
-!!!Questions &amp; ideas to discuss with the Climate Rescue Catalytic Group (user input)
-
-&lt;&lt;textarea &quot;$challengesQuestionsIdeas&quot; &quot;&quot;&gt;&gt;
-
-----
-Are you reasonably sure that you have finished working on this page?  You can change you mind later if you like.
-
-(yes)  (not yet)  add buttons
-&lt;&lt;set $genericWholePackagePlanArray to [0,0,0,0,0,0,0,0,0,0,0,0]&gt;&gt;
-
-The work on this page is/is not complete)
-
-----
-!The report material related to this question
-
-(As the user works through this page, report material related to the page will collect here.  It will also be repeated on the Output Report page.)
-
-----
-&lt;&lt;return&gt;&gt; | [[«previous|&#39;Whole System&#39; Plan]] | [[next»|Q1. Who-what to protect?]]</tw-passagedata><tw-passagedata pid="19" name="Q10. What actions needed to activate alliances?" tags="@#P9916 @#Fold020" position="1375,2075" size="100,100">&lt;&lt;return&gt;&gt; | [[Navigation» &#39;Whole Package&#39;|NAV_&#39;Whole System&#39; Plan]] | &lt;&lt;fav&gt;&gt;
+&lt;&lt;return&gt;&gt; | [[«previous|Getting started]] | [[next»|Q1. Who-what to protect?]]</tw-passagedata><tw-passagedata pid="18" name="Q10. What actions needed to activate alliances?" tags="@#P9916 @#Fold020" position="1375,2075" size="100,100">&lt;&lt;return&gt;&gt; | [[Navigation» &#39;Whole Package&#39;|NAV_&#39;Whole System&#39; Plan]] | &lt;&lt;fav&gt;&gt;
 ----
 !!Q10. What actions are needed to build and activate the alliances?
 
@@ -911,9 +880,40 @@ The work on this page is/is not complete)
 (As the user works through this page, report material related to the page will collect here.  It will also be repeated on the Output Report page.)
 
 ----
-&lt;&lt;return&gt;&gt; | [[«previous|Q9. What alliances needed?]] | [[next»|Q11. How does action package differ from conventional?]]</tw-passagedata><tw-passagedata pid="20" name="Q11. How does action package differ from conventional?" tags="@#P9914 @#Fold021" position="1375,2200" size="100,100">&lt;&lt;return&gt;&gt; | [[Navigation» &#39;Whole Package&#39;|NAV_&#39;Whole System&#39; Plan]] | &lt;&lt;fav&gt;&gt;
+&lt;&lt;return&gt;&gt; | [[«previous|Q9. What alliances needed?]] | [[next»|11. Challenges for the &#39;whole system&#39; plan]]</tw-passagedata><tw-passagedata pid="19" name="11. Challenges for the &#39;whole system&#39; plan" tags="@#P9934 @#Fold011" position="1375,825" size="100,100">&lt;&lt;return&gt;&gt; | [[Navigation» &#39;Whole System&#39; Plan|NAV_&#39;Whole System&#39; Plan]] | &lt;&lt;fav&gt;&gt;
 ----
-!!Q11. How does the approach emerging from answering the earlier questions differ from the (currently) usual approach?
+!!11. Challenges that the &#39;whole system&#39; plan needs to deal with (identified in response to questions 1-10)
+
+!!!How to answer the question
+
+//(add advisory material)//
+
+!!!Writing up your conclusions (user input)
+
+&lt;&lt;textarea &quot;$challengesConclusions&quot; &quot;&quot;&gt;&gt;
+
+
+!!!Questions &amp; ideas to discuss with the Climate Rescue Catalytic Group (user input)
+
+&lt;&lt;textarea &quot;$challengesQuestionsIdeas&quot; &quot;&quot;&gt;&gt;
+
+----
+Are you reasonably sure that you have finished working on this page?  You can change you mind later if you like.
+
+(yes)  (not yet)  add buttons
+&lt;&lt;set $genericWholePackagePlanArray to [0,0,0,0,0,0,0,0,0,0,0,0]&gt;&gt;
+
+The work on this page is/is not complete)
+
+----
+!The report material related to this question
+
+(As the user works through this page, report material related to the page will collect here.  It will also be repeated on the Output Report page.)
+
+----
+&lt;&lt;return&gt;&gt; | [[«previous|Q10. What actions needed to activate alliances?]] | [[next»|Q12. How does action package differ from conventional?]]</tw-passagedata><tw-passagedata pid="20" name="Q12. How does action package differ from conventional?" tags="@#P9914 @#Fold021" position="1375,2200" size="100,100">&lt;&lt;return&gt;&gt; | [[Navigation» &#39;Whole Package&#39;|NAV_&#39;Whole System&#39; Plan]] | &lt;&lt;fav&gt;&gt;
+----
+!!Q12. How does the approach emerging from answering the earlier questions differ from the (currently) usual approach?
 
 !!!How to answer the question
 
@@ -943,9 +943,9 @@ The work on this page is/is not complete)
 (As the user works through this page, report material related to the page will collect here.  It will also be repeated on the Output Report page.)
 
 ----
-&lt;&lt;return&gt;&gt; | [[«previous|Q10. What actions needed to activate alliances?]] | [[next»|Q12. Significance of differences?]]</tw-passagedata><tw-passagedata pid="21" name="Q12. Significance of differences?" tags="@#P9912 @#Fold022" position="1375,2325" size="100,100">[[Navigation» &#39;Whole Package&#39;|NAV_&#39;Whole System&#39; Plan]] | &lt;&lt;fav&gt;&gt;
+&lt;&lt;return&gt;&gt; | [[«previous|11. Challenges for the &#39;whole system&#39; plan]] | [[next»|Q13. Significance of differences?]]</tw-passagedata><tw-passagedata pid="21" name="Q13. Significance of differences?" tags="@#P9912 @#Fold022" position="1375,2325" size="100,100">&lt;&lt;return&gt;&gt; | [[Navigation» &#39;Whole Package&#39;|NAV_&#39;Whole System&#39; Plan]] | &lt;&lt;fav&gt;&gt;
 ----
-!!Q12. What are the implications of these differences (identified in response to question 11) for action?
+!!Q13. What are the implications of these differences (identified in response to question 12) for action?
 
 !!!How to answer the question
 
@@ -976,7 +976,7 @@ The work on this page is/is not complete)
 (As the user works through this page, report material related to the page will collect here.  It will also be repeated on the Output Report page.)
 
 ----
-&lt;&lt;return&gt;&gt; | [[«previous|Q11. How does action package differ from conventional?]] | [[next» (the &quot;building a support system&quot; series)|Building a support system for &#39;whole system&#39; action]]</tw-passagedata><tw-passagedata pid="22" name="Q1. Who-what to protect?" tags="@#P9932 @#Fold012" position="1375,950" size="100,100">[[Navigation» &#39;Whole Package&#39;|NAV_&#39;Whole System&#39; Plan]] | &lt;&lt;fav&gt;&gt;
+&lt;&lt;return&gt;&gt; | [[«previous|Q12. How does action package differ from conventional?]] | [[next» (the &quot;building a support system&quot; series)|Building a support system for &#39;whole system&#39; action]]</tw-passagedata><tw-passagedata pid="22" name="Q1. Who-what to protect?" tags="@#P9932 @#Fold012" position="1375,950" size="100,100">[[Navigation» &#39;Whole Package&#39;|NAV_&#39;Whole System&#39; Plan]] | &lt;&lt;fav&gt;&gt;
 ----
 !!Q1. Who or what should be protected?
 
@@ -1007,7 +1007,7 @@ The work on this page is/is not complete)
 (As the user works through this page, report material related to the page will collect here.  It will also be repeated on the Output Report page.)
 
 ----
-&lt;&lt;return&gt;&gt; | [[«previous|Challenges for the &#39;whole system&#39; plan]] | [[next»|Q2. What threats need to be dealt with?]]</tw-passagedata><tw-passagedata pid="23" name="Q2. What threats need to be dealt with?" tags="@#P9930 @#Fold013" position="1375,1075" size="100,100">&lt;&lt;return&gt;&gt; | [[Navigation» &#39;Whole Package&#39;|NAV_&#39;Whole System&#39; Plan]] | &lt;&lt;fav&gt;&gt;
+&lt;&lt;return&gt;&gt; | [[«previous|&#39;Whole System&#39; Plan]] | [[next»|Q2. What threats need to be dealt with?]]</tw-passagedata><tw-passagedata pid="23" name="Q2. What threats need to be dealt with?" tags="@#P9930 @#Fold013" position="1375,1075" size="100,100">&lt;&lt;return&gt;&gt; | [[Navigation» &#39;Whole Package&#39;|NAV_&#39;Whole System&#39; Plan]] | &lt;&lt;fav&gt;&gt;
 ----
 !!Q2. What threats need to be dealt with?
 
@@ -1296,25 +1296,25 @@ The work on this page is/is not complete)
 !!Is this really for you?
 Is your approach to climate one or more of these:
 * to achieve a less danderous outcome than what you fear is possible (but likely not less dangerous than it is now)?
-* to get a more effecive plan for doing what society &quot;already knows&quot; needs doing?
+* to get a more effective plan for doing what society &quot;already knows&quot; needs doing?
 * premised on the idea that climate acton will inevitably fall well  short of what&#39;s needed and will be slow and incremental.
 
 If it is, then perhaps this adviser is not what you want?
 
 
-But if you are still curious about the alternative approach that we will be exploring through this adviser, then let&#39;s move on to the first &#39;level&#39; - developing a [[&#39;Whole System&#39; Plan]].</tw-passagedata><tw-passagedata pid="32" name="NAV_&#39;Whole System&#39; Plan" tags="@#P9988 @#Fold002" position="1175,825" size="100,100">&lt;nobr&gt;&lt;/nobr&gt;[[Challenges that the &#39;whole system&#39; plan needs to deal with|Challenges for the &#39;whole system&#39; plan]]
-[[Q1. Who-what to protect?|Q1. Who-what to protect?]]
-[[Q2. What threats need to be dealt with?|Q2. What threats need to be dealt with?]]
-[[Q3. How much protection?|Q3. How much protection?]]
-[[Q4. What protection conditions needed?|Q4. What protection conditions needed?]]
-[[Q5. What protection actions needed?|Q5. What protection actions needed?]]
-[[Q6. Geographical scope?|Q6. Geographical scope?]]
-[[Q7. Mode of action?|Q7. Mode of action?]]
+But if you are still curious about the alternative approach that we will be exploring through this adviser, then let&#39;s move on to the first &#39;level&#39; - developing a [[&#39;Whole System&#39; Plan]].</tw-passagedata><tw-passagedata pid="32" name="NAV_&#39;Whole System&#39; Plan" tags="@#P9988 @#Fold002" position="1175,825" size="100,100">&lt;nobr&gt;&lt;/nobr&gt;[[Q1. Who-what to protect?|Q1. Who-what to protect?]]
+[[Q2. What threats need to be dealt with?]]
+[[Q3. How much protection?]]
+[[Q4. What protection conditions needed?]]
+[[Q5. What protection actions needed?]]
+[[Q6. Geographical scope?]]
+[[Q7. Mode of action?]]
 [[Q8. Delivery of protection?|Q8. Delivering protection]]
 [[Q9. What alliances needed?|Q9. What alliances needed?]]
-[[Q10. What actions are needed to activate alliances?|Q10. What actions needed to activate alliances?]]
-[[Q11. How does action package differ from conventional?|Q11. How does action package differ from conventional?]]
-[[Q12. Significance of differences?|Q12. Significance of differences?]]
+[[Q10. What actions needed to activate alliances?]]
+[[11. Challenges for the &#39;whole system&#39; plan]]
+[[Q12. How does action package differ from conventional?]]
+[[Q13. Significance of differences?|Q13. Significance of differences?]]
 
 [[Output Report: &#39;Whole System&#39; Plan|Output Report_&#39;Whole System&#39; Plan]]
 
