--- a/index.html
+++ b/index.html
@@ -1290,19 +1290,16 @@ The work on this page is/is not complete)
 (As the user works through this page, report material related to the page will collect here.  It will also be repeated on the Output Report page.)
 
 ----
-&lt;&lt;return&gt;&gt; | [[«previous|Q8. Delivering protection]] | [[next»|Q10. What actions needed to activate alliances?]]</tw-passagedata><tw-passagedata pid="31" name="Is this really what you want?" tags="@#P9997 @#Fold002" position="950,700" size="100,100">&lt;&lt;fav&gt;&gt;
-(add question mark graphic)
-&lt;&lt;if previous() is &quot;&#39;Whole Package&#39; Plan&quot; and $startupWarning is 1&gt;&gt;&lt;&lt;goto [[Start]]&gt;&gt;&lt;&lt;elseif $startupWarning is 1&gt;&gt;&lt;&lt;goto [[&#39;Whole System&#39; Plan]]&gt;&gt;&lt;&lt;/if&gt;&gt;&lt;&lt;set $startupWarning to 1&gt;&gt;
-!!Is this really for you?
-Is your approach to climate one or more of these:
-* to achieve a less danderous outcome than what you fear is possible (but likely not less dangerous than it is now)?
-* to get a more effective plan for doing what society &quot;already knows&quot; needs doing?
-* premised on the idea that climate acton will inevitably fall well  short of what&#39;s needed and will be slow and incremental.
-
+&lt;&lt;return&gt;&gt; | [[«previous|Q8. Delivering protection]] | [[next»|Q10. What actions needed to activate alliances?]]</tw-passagedata><tw-passagedata pid="31" name="Is this really what you want?" tags="@#P9997 @#Fold002" position="950,700" size="100,100">&lt;IMG SRC=&quot;http://www.green-innovations.asn.au/graphics/Question-sign_3_25pc.png&quot;&gt;&lt;nobr&gt;
+&lt;&lt;if previous() is &quot;&#39;Whole Package&#39; Plan&quot; and $startupWarning is 1&gt;&gt;&lt;&lt;goto [[Start]]&gt;&gt;&lt;&lt;elseif $startupWarning is 1&gt;&gt;&lt;&lt;goto [[&#39;Whole System&#39; Plan]]&gt;&gt;&lt;&lt;/if&gt;&gt;&lt;&lt;set $startupWarning to 1&gt;&gt;&lt;/nobr&gt;
+!!Is this Adviser really for you?
+Is your approach to climate based on one or more of these assumptions?
+* The climate outcome that should be aimed for will be less dangerous than what you fear is possible, but not less dangerous than it is now.
+* A suitable climate action plan will be based on doing what society &quot;already knows&quot; needs doing.
+* Climate action will inevitably fall well short of what&#39;s needed and will be slow and incremental.
 If it is, then perhaps this adviser is not what you want?
 
-
-But if you are still curious about the alternative approach that we will be exploring through this adviser, then let&#39;s move on to the first &#39;level&#39; - developing a [[&#39;Whole System&#39; Plan]].</tw-passagedata><tw-passagedata pid="32" name="NAV_&#39;Whole System&#39; Plan" tags="@#P9988 @#Fold002" position="1175,825" size="100,100">&lt;nobr&gt;&lt;/nobr&gt;[[Q1. Who-what to protect?|Q1. Who-what to protect?]]
+But if you are still curious about the alternative approach that will be explored through this adviser, then let&#39;s move on to the first &#39;level&#39; - developing a [[&#39;Whole System&#39; Plan]].</tw-passagedata><tw-passagedata pid="32" name="NAV_&#39;Whole System&#39; Plan" tags="@#P9988 @#Fold002" position="1175,825" size="100,100">&lt;nobr&gt;&lt;/nobr&gt;[[Q1. Who-what to protect?|Q1. Who-what to protect?]]
 [[Q2. What threats need to be dealt with?]]
 [[Q3. How much protection?]]
 [[Q4. What protection conditions needed?]]
