--- a/index.html
+++ b/index.html
@@ -4394,7 +4394,8 @@ The Climate Rescue Adviser will also be integrated with the new elements of the 
 !!Work program for the development of the Adviser
 !!![[Development design philosophy (tech)]]
 !!!Adviser content
-*Why does the index system have 2 passges for each index topic (a get passage and an include passage) - it seems reducndant.
+*Conditionally hide more main menu items (&#39;Whole system&#39; plan; Global scenarios; Building a support system; ) and cluster the Support Materials until the user chooses to display them in the main menu) - to keep the entry into the Adiser simpler until the user can handle additional complexity
+*Why does the index system have 2 passages for each index topic (a get passage and an include passage) - it seems redundant.
 *Revise/complete the Getting started page.
 *Incorporate all the material in the CR strategy and framework papers into the database part of the adviser.
 *Add all pages (other than those linked to the main menu) to the new Favourites page using the favourites automation system).
@@ -4403,10 +4404,10 @@ The Climate Rescue Adviser will also be integrated with the new elements of the 
 *Find users/potential users to proofread or to review the Adviser content, layout and logic, or find problems or suggest improvements.
 !!!Adviser look and feel
 *Redesign the CSS
-!!!Twine 2
+!!!SugarCube/Twee3
 *(to come)
 !!!Tech stack
-*Decude on the tech to build the database in
+*Decide on the tech to build the database in
 *Decide on the tech/hosting for the main public web pages
 !!!Other aspect of the Climate Rescue website
 (to come)
