--- a/index.html
+++ b/index.html
@@ -4383,16 +4383,15 @@ The Climate Rescue Adviser will also be integrated with the new elements of the 
 *[[Work program for the development of the Advisor|Work program for the Adviser]]
 *[[Development design philosophy (tech)]]
 *[[Development design philosophy (content)]]
-*The coding for pages to be favourites enabled is in commented text in the [[Favourites]] passage.
+*The coding for pages to be &quot;favourites enabled&quot; is in commented text in the [[Favourites]] passage.
 *[[Guidance on using Twine 2 and related tools]]
 *[[Guidance on building advisory tools]]
 *[[Sandbox]]
 *[[Wipe memory tools for developers]]
 *[[Adviser levels not yet developed]]
 *[[Database (bridge within the Adviser)]]
-*[[Old Guide - Core|Old material]]</tw-passagedata><tw-passagedata pid="388" name="Work program for the Adviser" tags="@#P9961 @#Fold080" position="1250,20675" size="100,100">[[Dev stuff]] | &lt;&lt;fav&gt;&gt;
+*[[Old Guide - Core|Old material]]</tw-passagedata><tw-passagedata pid="388" name="Work program for the Adviser" tags="@#P9961 @#Fold080" position="1250,20675" size="100,100">[[Dev stuff]] | [[Dev design_Tech|Development design philosophy (tech)]] | [[Dev design_Content|Development design philosophy (content)]] | here |  &lt;&lt;fav&gt;&gt;
 !!Work program for the development of the Adviser
-!!![[Development design philosophy (tech)]]
 !!!Adviser content
 *Conditionally hide more main menu items (&#39;Whole system&#39; plan; Global scenarios; Building a support system; ) and cluster the Support Materials until the user chooses to display them in the main menu) - to keep the entry into the Adiser simpler until the user can handle additional complexity
 *Why does the index system have 2 passages for each index topic (a get passage and an include passage) - it seems redundant.
