--- a/index.html
+++ b/index.html
@@ -612,9 +612,6 @@ Tel: +61 3 9078 9746  /  (03) 9078 9746</tw-passagedata><tw-passagedata pid="11"
 [[Output reports]]
 &lt;&lt;/if&gt;&gt;
 
-&lt;&lt;/nobr&gt;&gt;
-[[Other material]]
-&lt;&lt;nobr&gt;&gt;
 &lt;&lt;if $favouritesInMenu eq 1&gt;&gt;
 [[Favourites]]
 &lt;&lt;/if&gt;&gt;
@@ -631,7 +628,8 @@ Tel: +61 3 9078 9746  /  (03) 9078 9746</tw-passagedata><tw-passagedata pid="11"
 [[Contact team|Contact the Adviser team]]
 &lt;&lt;/if&gt;&gt;
 
-&lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="14" name="TextboxPlus Widget" tags="widget nobr @#P9992 @#Fold000" position="750,0" size="100,100">/* &lt;&lt;textboxPlus&gt;&gt; widget v1.3 - Start */
+&lt;&lt;/nobr&gt;&gt;
+[[Other material]]</tw-passagedata><tw-passagedata pid="14" name="TextboxPlus Widget" tags="widget nobr @#P9992 @#Fold000" position="750,0" size="100,100">/* &lt;&lt;textboxPlus&gt;&gt; widget v1.3 - Start */
 /* Created by HiEv*/
 /* https://qjzhvmqlzvoo5lqnrvuhmg-on.drv.tw/UInv/Sample_Code.html#TextboxPlus%20widget */
 /* Usage:
