--- a/index.html
+++ b/index.html
@@ -612,10 +612,6 @@ Tel: +61 3 9078 9746  /  (03) 9078 9746</tw-passagedata><tw-passagedata pid="11"
 [[Output reports]]
 &lt;&lt;/if&gt;&gt;
 
-&lt;&lt;if $favouritesInMenu eq 1&gt;&gt;
-[[Favourites]]
-&lt;&lt;/if&gt;&gt;
-
 &lt;&lt;if $backgroundInMenu eq 1&gt;&gt;
 [[Background|Background (get)]]
 &lt;&lt;/if&gt;&gt;
@@ -626,6 +622,10 @@ Tel: +61 3 9078 9746  /  (03) 9078 9746</tw-passagedata><tw-passagedata pid="11"
 
 &lt;&lt;if $contactInMenu eq 1&gt;&gt;
 [[Contact team|Contact the Adviser team]]
+&lt;&lt;/if&gt;&gt;
+
+&lt;&lt;if $favouritesInMenu eq 1&gt;&gt;
+[[Favourites]]
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;/nobr&gt;&gt;
@@ -3878,10 +3878,12 @@ Cathy Moore&#39;s article collections on:
 [[Adapting the &#39;whole system&#39; plan]]
 [[Linked projects]]
 [[Output reports]]
-[[Favourites]]
 [[Background|Background (get)]]
 [[Dev stuff]]
-[[Contact the Adviser team]]</tw-passagedata><tw-passagedata pid="349" name="Wipe memory tools for developers" tags="@#P9956 @#Fold073" position="1875,20675" size="100,100">&lt;&lt;return&gt;&gt; | &lt;&lt;fav&gt;&gt; 
+[[Contact the Adviser team]]
+[[Favourites]]
+
+&lt;&lt;return&gt;&gt;</tw-passagedata><tw-passagedata pid="349" name="Wipe memory tools for developers" tags="@#P9956 @#Fold073" position="1875,20675" size="100,100">&lt;&lt;return&gt;&gt; | &lt;&lt;fav&gt;&gt; 
 !!In case you need to wipe the Adviser&#39;s long term memory
 Between sessions, the Adviser remembers choices you have made and text you have entered.  This means that you can close your browser or reload the Adviser and the Adviser will remember your previous choices. 
 
@@ -4411,7 +4413,6 @@ The Climate Rescue Adviser will also be integrated with the new elements of the 
 *[[Guidance on building advisory tools]]
 *[[Sandbox]]
 *[[Wipe memory tools for developers]]
-*[[Adviser levels not yet developed]]
 *[[Database (bridge within the Adviser)]]
 *[[Old Guide - Core|Old material]]</tw-passagedata><tw-passagedata pid="389" name="Work program for the Adviser" tags="@#P9961 @#Fold080" position="1250,20675" size="100,100">[[Dev stuff]] | [[Secret developers&#39; business]] | here | [[Dev design_Tech|Development design philosophy (tech)]] | [[Dev design_Content|Development design philosophy (content)]] | &lt;&lt;fav&gt;&gt;
 !!Work program for the development of the Adviser
