--- a/index.html
+++ b/index.html
@@ -1065,7 +1065,7 @@ The work on this page is/is not complete)
 (As the user works through this page, report material related to the page will collect here.  It will also be repeated on the Output Report page.)
 
 ----
-&lt;&lt;return&gt;&gt; | [[«previous|Q1. Who-what to protect?]] | [[next»|Q3. How much protection?]] |</tw-passagedata><tw-passagedata pid="25" name="Q3. How much protection?" tags="@#P9928 @#Fold014" position="1375,1200" size="100,100">&lt;&lt;return&gt;&gt; | [[Navigation» &#39;Whole Package&#39;|NAV_&#39;Whole System&#39; Plan]] | &lt;&lt;fav&gt;&gt;
+&lt;&lt;return&gt;&gt; | [[«previous|Q1. Who-what to protect?]] | [[next»|Q3. How much protection?]]</tw-passagedata><tw-passagedata pid="25" name="Q3. How much protection?" tags="@#P9928 @#Fold014" position="1375,1200" size="100,100">&lt;&lt;return&gt;&gt; | [[Navigation» &#39;Whole Package&#39;|NAV_&#39;Whole System&#39; Plan]] | &lt;&lt;fav&gt;&gt;
 ----
 !!Q3. What degree of protection do you want to achieve?
 
@@ -4417,7 +4417,6 @@ The Climate Rescue Adviser will also be integrated with the new elements of the 
 *[[Old Guide - Core|Old material]]</tw-passagedata><tw-passagedata pid="389" name="Work program for the Adviser" tags="@#P9961 @#Fold080" position="1250,20675" size="100,100">[[Dev stuff]] | [[Secret developers&#39; business]] | here | [[Dev design_Tech|Development design philosophy (tech)]] | [[Dev design_Content|Development design philosophy (content)]] | &lt;&lt;fav&gt;&gt;
 !!Work program for the development of the Adviser
 !!!Adviser content
-*Conditionally hide more main menu items (&#39;Whole system&#39; plan; Global scenarios; Building a support system; ) and cluster the Support Materials until the user chooses to display them in the main menu) - to keep the entry into the Adiser simpler until the user can handle additional complexity
 *Why does the index system have 2 passages for each index topic (a get passage and an include passage) - it seems redundant.
 *Revise/complete the Getting started page.
 *Incorporate all the material in the CR strategy and framework papers into the database part of the adviser.
