--- a/index.html
+++ b/index.html
@@ -2421,10 +2421,10 @@ Richer countries will have greater capacity for local adaptation (but a reduced 
 * [[Principles, factors, strategies and solutions|Principles etc]]
 * [[Methods]]
 * [[Frameworks]]
-* [[Learning from history]]  /% Passage ID:(background.gather)_06_003_9952 %/</tw-passagedata><tw-passagedata pid="179" name="Conventional vs Maximum Protection--Framework comparisons" tags="" position="1125,17400" size="200,200">[[Background|Background (get)]] | | [[Frameworks]] | (here) | &lt;&lt;fav&gt;&gt; 
+* [[Learning from history]]  /% Passage ID:(background.gather)_06_003_9952 %/</tw-passagedata><tw-passagedata pid="179" name="Climate Rescue vs conventional approaches--Framework comparisons" tags="" position="1150,17400" size="200,200">[[Background|Background (get)]] | | [[Frameworks]] | (here) | &lt;&lt;fav&gt;&gt; 
 ----
-!!Conventional vs Maximum Protection Framework
-The detail for the Maximum Protection Framework is found [[here|Backbone for Climate Rescue Action]].
+!!Climate Rescue vs conventional approaches
+The detail for the Climate Rescue framework is found [[here|Backbone for Climate Rescue Action]].
 
 (comparison to come)
 
@@ -2441,7 +2441,7 @@ The detail for the Maximum Protection Framework is found [[here|Backbone for Cli
 *[[Scoping approaches to climate action|Scoping approaches to climate action (Framework)]]
 
 !!!Framework comparisons
-*[[Conventional vs Maximum Protection Framework|Conventional vs Maximum Protection--Framework comparisons]]
+*[[Climate Rescue vs conventional approaches|Climate Rescue vs conventional approaches--Framework comparisons]]
 
 &lt;&lt;return&gt;&gt;</tw-passagedata><tw-passagedata pid="183" name="Detail_Recovery_Emergency Management" tags="" position="1750,14050" size="100,100">&lt;&lt;return&gt;&gt; | [[Background|Background (get)]] | [[Frameworks]] | [[Emergency Management|Emergency Management (Framework)]]| (here) | &lt;&lt;fav&gt;&gt; 
 ----  
@@ -4621,7 +4621,7 @@ border: 1px solid black;
 ****34. Unilateral cooperation
 ***Scoping approaches to climate action
 **Framework comparisons
-***Conventional vs Maximum Protection Framework
+***Climate Rescue Framework vs conventional approaches
 *Learning from history
 **Safety
 **Economic mobilisation in the world wars
