--- a/index.html
+++ b/index.html
@@ -797,10 +797,10 @@ Tel: +61 3 9078 9746  /  (03) 9078 9746</tw-passagedata><tw-passagedata pid="11"
 		});
 	});
 &lt;&lt;/script&gt;&gt;
-/* &lt;&lt;textboxPlus&gt;&gt; widget - End */</tw-passagedata><tw-passagedata pid="15" name="Version input (2include)" tags="@#P9991 @#Fold000" position="500,125" size="100,100">&lt;nobr&gt;Adviser revised 2 April 2022, 8.35 am.  &lt;small&gt;(Begun 19 December 2021)&lt;/small&gt;&lt;/nobr&gt;</tw-passagedata><tw-passagedata pid="16" name="Getting started" tags="@#P9998 @#Fold001" position="375,0" size="100,100">&lt;&lt;include [[Start]]&gt;&gt;</tw-passagedata><tw-passagedata pid="17" name="Start" tags="@#P9999 @#Fold001" position="250,0" size="100,100">!!Getting started
+/* &lt;&lt;textboxPlus&gt;&gt; widget - End */</tw-passagedata><tw-passagedata pid="15" name="Version input (2include)" tags="@#P9991 @#Fold000" position="500,125" size="100,100">&lt;nobr&gt;Adviser revised 2 April 2022, 1.16 pm.  &lt;small&gt;(Begun 19 December 2021)&lt;/small&gt;&lt;/nobr&gt;</tw-passagedata><tw-passagedata pid="16" name="Getting started" tags="@#P9998 @#Fold001" position="375,0" size="100,100">&lt;&lt;include [[Start]]&gt;&gt;</tw-passagedata><tw-passagedata pid="17" name="Start" tags="@#P9999 @#Fold001" position="250,0" size="100,100">!!Getting started
 The purpose of the Climate Rescue Adviser is to help people to prepare a climate action plan based on a commitment to:
 *maximum protection for the climate vulnerable
-*climate restoration
+*safe climate restoration
 *taking action in the context of a &#39;whole package&#39; plan
 *emergency mode of action.
 See:  http://bit.ly/DeliveringMaximumProtection
@@ -840,7 +840,7 @@ Okay – here we go: [[next»|&#39;Whole System&#39; Plan]]
 &lt;/nobr&gt;
 By answering these questions below, it should be possible to create a climate plan based on four key principles:
 *maximum protection for the climate vulnerable
-*climate restoration
+*safe climate restoration
 *taking action in the context of a &#39;Whole Package&#39; plan
 *emergency mode of action
 that can later be adapted for use by individuals, organisations and governments etc.
