--- a/index.html
+++ b/index.html
@@ -807,7 +807,7 @@ See:  http://bit.ly/DeliveringMaximumProtection
 
 The Adviser is being built by RSTI&#39;s Climate Rescue Catalytic Group and is in a very early stage of development, so please bear with us over the coming months as it is built up.
 
-//(development comment)// The purpose of this page &amp;ndash; the material to be added here will help people get orientated before plunging in to create their first draft of a &#39;Whole Package&#39; climate action plan based on the maximum protextion approach.)
+//(development comment)// The purpose of this page &amp;ndash; the material to be added here will help people get orientated before plunging in to create their first draft of a &#39;Whole Package&#39; climate action plan based on the maximum protection approach.)
 
 !!!!The need for a &quot;maximum protection&quot; approach to climate action
 (to come)
