--- a/index.html
+++ b/index.html
@@ -3883,7 +3883,7 @@ Cathy Moore&#39;s article collections on:
 *[[The SugarCube documentation|http://www.motoslave.net/sugarcube/2/docs/]]
 *[[Twinelab Twine Resources|https://twinelab.net/twine-resources/]]
 *[[Twine 2/SugarCube 2 guide (The Cookbook)|http://www.motoslave.net/sugarcube/2/]]
-*[[A Modern Developer&#39;s Workflow For Twine|https://dev.to/lazerwalker/a-modern-developer-s-workflow-for-twine-4imp]]</tw-passagedata><tw-passagedata pid="349" name="Main menu items (complete)" tags="@#P9886 @#Fold072" position="2125,20675" size="100,100">&lt;&lt;fav&gt;&gt;
+*[[A Modern Developer&#39;s Workflow For Twine|https://dev.to/lazerwalker/a-modern-developer-s-workflow-for-twine-4imp]]</tw-passagedata><tw-passagedata pid="349" name="Main menu items (all items)" tags="@#P9886 @#Fold072" position="2125,20675" size="100,100">&lt;&lt;fav&gt;&gt;
 ----
 [[Getting started]]
 [[&#39;Whole System Package&#39; Plan|Is this really what you want?]]
@@ -4418,7 +4418,7 @@ The Climate Rescue Adviser will also be integrated with the new elements of the 
 &lt;&lt;/if&gt;&gt;&lt;&lt;if $accessCode isnot &quot;letmein&quot;&gt;&gt;&lt;&lt;goto [[Secret developers&#39; business (login)]]&gt;&gt;&lt;&lt;/if&gt;&gt;&lt;&lt;/nobr&gt;&gt;[[Dev stuff]] | here | [[Work program for the Adviser]] | [[Dev design_Tech|Development design philosophy (tech)]] | [[Dev design_Content|Development design philosophy (content)]] |  &lt;&lt;fav&gt;&gt;
 ----
 !!For developers of the Adviser
-*[[Main menu items (complete)]]
+*[[Main menu items (all items)]]
 *[[Work program for the development of the Advisor|Work program for the Adviser]]
 *[[Development design philosophy (tech)]]
 *[[Development design philosophy (content)]]
