--- a/index.html
+++ b/index.html
@@ -4398,7 +4398,9 @@ To &#39;&#39;print&#39;&#39; this checklist, highlight the checklist panel, copy
 
 This Adviser is being built on the structure, content and coding of an earlier project - a guide for getting into climate action in emergecny mode.  As the new Adviser is built up the old material will be either incorporated or deleted if it no longer needed. 
 
-The Climate Rescue Adviser will also be integrated with the new elements of the Climate Rescue website that will begin development shortly. 
+The Climate Rescue Adviser will also be integrated with the new elements of the Climate Rescue website that will begin development shortly.
+
+Here&#39;s what remains of the older guide:
 
 [[Intro &amp; selecting a challenge]]
 [[Setting up a climate emergency action program]]
