--- a/index.html
+++ b/index.html
@@ -3827,17 +3827,23 @@ I&#39;m guessing that playthrough also captures pre-moment memory as well??
 //&#39;&#39;Philip:&#39;&#39;// That before a shift to a new passage or some coding equivalent (which I&#39;ve seen exists according to the documentation) or random advice I&#39;ve stumbled over.</tw-passagedata><tw-passagedata pid="345" name="The teck stack" tags="" position="1375,20800" size="100,100">&lt;&lt;fav&gt;&gt;
 ----
 !!The teck stack
-!!!Current selection
+!!!Current selection choice process
 After a fairly extensive review of our needs, looking at authoring tools for branching scenario development, expert system tools etc. it was decided that the Adviser needed, in the main, to be able to handle very loose logic so branching scenario style authoring tools were probably the best option for the moment.
 
-Over a couple of months we upgraded from earlier use of Twine 1.4.2, to Twine 1.4.3 then jumped to Twine2/SugarCube2 then finally settled on the current Tweego / SugarCube / VSCode teck stack.
+Over a couple of months we upgraded from earlier use of Twine 1.4.2, to Twine 1.4.3 then jumped to Twine2/SugarCube2 then finally settled on the current Tweego / SugarCube / VSCode + Twee3 Language Tools teck stack.
+
+!!!The current tech stack
+&lt;&lt;include [[Adviser Tech Stack (2include)]]&gt;&gt; 
 
 !!!Future development
 A database needs to be developed to hold the RSTI Climate Rescue knowledgebase that has been built up over the last decade or so.  For the moment we will use Google Drive to hold text docs etc. and will hold structured information chunks in Twee / SugarCube generated html files.  However the whole database issue needs much more careful exploration to determine what the best tech stack would be.  
 
 In relation to the logic capabilities of the Adviser, the Visirule expert system tool kit will likely be useful.  Once the Adviser is functional for users based on the Tweego / SugarCube / VSCode teck stack, we need to revisit the use of the Visirule toolkit.  And this review needs to be accelerated when the science base for identifying the needs of the climate vulnerable has been advanced.
 
-https://www.visirule.co.uk</tw-passagedata><tw-passagedata pid="346" name="The global Climate Rescue IT strategy" tags="@#P9879 @#Fold077" position="1375,21175" size="100,100">&lt;&lt;fav&gt;&gt;
+https://www.visirule.co.uk
+
+
+&lt;&lt;return&gt;&gt;</tw-passagedata><tw-passagedata pid="346" name="The global Climate Rescue IT strategy" tags="@#P9879 @#Fold077" position="1375,21175" size="100,100">&lt;&lt;fav&gt;&gt;
 ----
 !The global Climate Rescue IT strategy
 &#39;&#39;//Philip://&#39;&#39; I&#39;ve got a whole new evolutionary leap in mind growing out of the adviser project.
