--- a/index.html
+++ b/index.html
@@ -3827,7 +3827,7 @@ I&#39;m guessing that playthrough also captures pre-moment memory as well??
 //&#39;&#39;Philip:&#39;&#39;// That before a shift to a new passage or some coding equivalent (which I&#39;ve seen exists according to the documentation) or random advice I&#39;ve stumbled over.</tw-passagedata><tw-passagedata pid="345" name="The teck stack" tags="" position="1375,20800" size="100,100">&lt;&lt;fav&gt;&gt;
 ----
 !!The teck stack
-!!!Current selection choice process
+!!!Current selection process
 After a fairly extensive review of our needs, looking at authoring tools for branching scenario development, expert system tools etc. it was decided that the Adviser needed, in the main, to be able to handle very loose logic so branching scenario style authoring tools were probably the best option for the moment.
 
 Over a couple of months we upgraded from earlier use of Twine 1.4.2, to Twine 1.4.3 then jumped to Twine2/SugarCube2 then finally settled on the current Tweego / SugarCube / VSCode + Twee3 Language Tools teck stack.
