--- a/index.html
+++ b/index.html
@@ -3841,7 +3841,7 @@ A database needs to be developed to hold the RSTI Climate Rescue knowledgebase t
 In relation to the logic and judgement capabilities of the Adviser, the Visirule set of expert system tools will likely be useful.  Once the Adviser is functional for users based on the Tweego / SugarCube / VSCode teck stack, we need to revisit the use of the Visirule toolkit.  And this review needs to be accelerated when the science base for identifying the needs of the climate vulnerable has advanced further.
 
 https://www.visirule.co.uk
-
+clive spenser &lt;clive@lpa.co.uk&gt;
 
 &lt;&lt;return&gt;&gt;</tw-passagedata><tw-passagedata pid="346" name="The global Climate Rescue IT strategy" tags="@#P9879 @#Fold077" position="1375,21175" size="100,100">&lt;&lt;fav&gt;&gt;
 ----
