--- a/index.html
+++ b/index.html
@@ -3836,9 +3836,9 @@ Over a couple of months we upgraded from earlier use of Twine 1.4.2, to Twine 1.
 &lt;&lt;include [[Adviser Tech Stack (2include)]]&gt;&gt; 
 
 !!!Future development
-A database needs to be developed to hold the RSTI Climate Rescue knowledgebase that has been built up over the last decade or so.  For the moment we will use Google Drive to hold text docs etc. and will hold structured information chunks in Twee / SugarCube generated html files.  However the whole database issue needs much more careful exploration to determine what the best tech stack would be.  
+A &#39;&#39;database&#39;&#39; needs to be developed to hold the RSTI Climate Rescue knowledgebase that has been built up over the last decade or so.  For the moment we will use Google Drive to hold text docs etc. and will hold structured information chunks in Twee / SugarCube generated html files.  However the whole database issue needs much more careful exploration to determine what the best tech stack would be.  
 
-In relation to the logic and judgement capabilities of the Adviser, the Visirule set of expert system tools will likely be useful.  Once the Adviser is functional for users based on the Tweego / SugarCube / VSCode teck stack, we need to revisit the use of the Visirule toolkit.  And this review needs to be accelerated when the science base for identifying the needs of the climate vulnerable has advanced further.
+In relation to the &#39;&#39;logic and judgement capabilities&#39;&#39; of the Adviser, the Visirule set of expert system tools will likely be useful.  Once the Adviser is functional for users based on the Tweego / SugarCube / VSCode teck stack, we need to revisit the use of the Visirule toolkit.  And this review needs to be accelerated when the science base for identifying the needs of the climate vulnerable has advanced further.
 
 https://www.visirule.co.uk
 clive spenser &lt;clive@lpa.co.uk&gt;
